[gd_scene load_steps=7 format=3 uid="uid://c4d14tn83g2no"]

[ext_resource type="Script" path="res://control.gd" id="1_hqj8v"]
[ext_resource type="FontFile" uid="uid://q3k6jx07udsu" path="res://font/Coming_Soon/ComingSoon-Regular.ttf" id="2_7c873"]
[ext_resource type="Texture2D" uid="uid://p0rgwb62upwv" path="res://Scenes/menu-screen.png" id="3_hnwfv"]
[ext_resource type="AudioStream" uid="uid://c7adf54n2v2eb" path="res://Musics/Menu.mp3" id="4_berxt"]

[sub_resource type="Theme" id="Theme_hsph5"]

[sub_resource type="Theme" id="Theme_oqgo4"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_hsph5")
script = ExtResource("1_hqj8v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -48.5
offset_right = -4.0
offset_bottom = 98.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_oqgo4")

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_7c873")
text = "Start"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_focus_color = Color(0.831373, 0.427451, 0.282353, 1)
theme_override_fonts/font = ExtResource("2_7c873")
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_focus_color = Color(0.831373, 0.427451, 0.282353, 1)
theme_override_fonts/font = ExtResource("2_7c873")
text = "Quitter"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -72.0
offset_right = 12010.0
offset_bottom = 7984.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0922594, 0.0922594)
texture = ExtResource("3_hnwfv")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_berxt")

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
